--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"description": "",
 	"main": "server.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon server.js"
+		"dev": "nodemon src/index.js --exec babel-node",
+		"build": "babel src/ -d dist",
+		"start": "node dist/bin/www.js"
 	},
 	"repository": {
 		"type": "git",
@@ -20,11 +21,13 @@
 	"dependencies": {
 		"axios": "^0.18.0",
 		"body-parser": "^1.18.3",
-		"express": "^4.16.3",
-		"path": "^0.12.7",
 		"cross-env": "^5.2.0",
 		"debug": "^4.1.0",
-		"dotenv": "^6.1.0"
+		"dotenv": "^6.1.0",
+		"ejs": "^2.6.1",
+		"express": "^4.16.3",
+		"morgan": "^1.9.1",
+		"path": "^0.12.7"
 	},
 	"devDependencies": {
 		"@babel/cli": "7.0.0-beta.54",
